be longer than the lines of dashes.

Contributor             Current Email address           CHANGELOG entries found
~~~~~~~~~~~~~~~~~~~~~~  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  ~~~~~~~~~~~~~~~~~~~~~~~
Alistair Riddoch        <AlRiddoch@zepler.org>           1 Jan 1995-20 Oct 1999
Harry Kalogirou         <HarKal@rainbow.cs.unipi.gr>     7 Nov 2001-24 Nov 2001
Michael McConnell       <Soruk@Eridani.co.uk>           11 Nov 2001-12 Nov 2001
Riley Williams          <rhw@MemAlpha.cx>                8 Nov 2001-11 Mar 2002

-------------------------------------------------------------------------------

Mon Mar 11 23:05:35 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* Release history brought up to date.

Wed Jan  9 23:36:32 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* Prepared for addition of images.zip links to download index.

Thu Nov 29 01:34:48 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* Corrected punctuation in homepage that led to wierd layout.

Sat Nov 24 16:44:47 EET 2001	Harry Kalogirou <harkal@gmx.net>

	* Wrote the download page.
	* Reformated the home page.
	* Added new release entries.

Tue Nov 20 20:42:09 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* Moved old homepage to "Introduction to ELKS" subpage.
	* Committed outline of new home page, format as agreed on the
	  Linux-8086 mailing list.

Mon Nov 12 23:57:31 EET 2001	Harry Kalogirou <harkal@gmx.net>

	* Added info about the mailing list archive.
	* Replaced tabs with spaces on the contributor list at the top of
	  this file.

Mon Nov 12 21:53:33 GMT 2001	Michael McConnell <soruk@eridani.co.uk>

	* Updated ELKS logo with transparent version.

Mon Nov 12 00:00:00 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* Added "description" and "keywords" fields to all HTML headers.
	* Reformatted home page slightly.

Sun Nov 11 21:33:54 GMT 2001	Michael McConnell <soruk@eridani.co.uk>

	* Updated "Baby Linux" logo with transparent version.

Sun Nov 11 11:06:53 GMT 2001	Riley Williams <rhw@MemAlpha.cx>
