@@ -14,8 +14,8 @@
 <TR>
 <TD Width=20% Align=Left VAlign=Top><Img Src="Images/ELKStag.gif"
 Alt="ELKS Logo" Height=77 Width=224></TD>
-<TD Width=70% Align=Center VAlign=Center><Font Size=+3>ELKS
-News</Font></TD>
+<TD Width=70% Align=Center VAlign=Center><Img Src="Images/ELKSbanner.gif"
+Alt="Linux in 640k" Height=60 Width=450></TD>
 <TD Width=10% Align=Right VAlign=Top><Img Src="Images/ELKSlogo.gif"
 Alt="Baby Linux Logo" Height=77 Width=65></TD>
 </TR>
