@@ -1,26 +1,17 @@
-<HTML>
-<Head>
+<HTML><Head>
 
 <Title>ELKS News: Index</Title>
 
 <Meta Name="description" Description="News relating to ELKS, a port of Linux for 16-bit Intel architectures">
 <Meta Name="keywords" Keywords="Linux,linux-86,linux-8086,16-bit,UNIX,ELKS,News">
 
-</Head>
-<Body BGColor=White Text=Black Link=Blue VLink=Magenta ALink=Red>
+</Head><Body BGColor=White Text=Black Link=Blue VLink=Magenta ALink=Red>
 
-<Table Border=0 Width=100%>
-
-<TR>
-<TD Width=20% Align=Left VAlign=Top><Img Src="../Images/ELKStag.gif"
-Alt="ELKS Logo" Height=77 Width=224></TD>
-<TD Width=70% Align=Center VAlign=Center><Font Size=+2>ELKS News
-Index</Font></TD>
-<TD Width=10% Align=Right VAlign=Top><Img Src="../Images/ELKSlogo.gif"
-Alt="Baby Linux Logo" Height=77 Width=65></TD>
-</TR>
-
-</Table>
+<Table Border=0 Width=100%><TR><TD Width=20% Align=Left VAlign=Top><Img
+Src="../Images/ELKStag.gif" Alt="ELKS Logo" Height=77 Width=224></TD><TD
+Width=70% Align=Center VAlign=Center><Font Size=+2>ELKS News
+Index</Font></TD><TD Width=10% Align=Right VAlign=Top><Img Alt="Baby Linux
+Logo" Src="../Images/ELKSlogo.gif" Height=77 Width=65></TD></TR></Table>
 
 <P Align=Center>|
 <A HRef="../CHANGELOG.txt">Website History</A> |
@@ -38,7 +29,21 @@ News |
 
 <OL>
 
-<LI><P Align=Justify><B>20 Nov 2001</B>: ELKS 0.1.0-pre1 released!!!</P>
+<LI><P Align=Justify><Strong>3 Apr 2002</Strong>: ELKS 0.1.1
+released!!!</P>
+
+<P Align=Justify>The 0.1.1 kernel has now been released. This fixes a
+<Strong>MAJOR</Strong> bug in the kernel configuration system that managed
+to sneak past the development team !!!!!!!</P>
+
+<LI><P Align=Justify><Strong>1 Apr 2002</Strong>: ELKS 0.1.0
+released!!!</P>
+
+<P Align=Justify>The ELKS kernel has now progressed to the next stage of
+development, and the <Strong>0.1</Strong> kernel series now exists.</P>
+
+<LI><P Align=Justify><Strong>20 Nov 2001</Strong>: ELKS 0.1.0-pre1
+released!!!</P>
 
 <P Align=Justify>The ELKS kernel is now considered to be ready to progress
 to the next stage of development. Accordingly, the developers have
@@ -48,9 +53,8 @@ released version 0.1.0-pre1 thereof.</P>
 
 <HR Width=90%>
 
-<P Align=Center>This document is released under the terms of the
-<A HRef="http://www.fsf.org/licenses/gpl.html">GNU General Public
+<P Align=Center>This document is released under the terms of the <A
+HRef="http://www.fsf.org/licenses/gpl.html">GNU General Public
 Licence</A>, version 2 only.</P>
 
-</Body>
-</HTML>
+</Body></HTML>
