@@ -57,10 +57,25 @@ date:</P>
 </TR>
 
 <TR Align=Center CellPadding=3 VAlign=Center>
+<TD RowSpan=2>6</TD>
+<TD RowSpan=2>Apr</TD>
+<TD RowSpan=5>2002</TD>
+<TD>ELKS/WEB</TD>
+<TD>0.2.3</TD>
+<TD><P Align=Justify>The ELKS website was brought up to date. This
+includes a new banner that now appears on the ELKS homepage only.</P></TD>
+</TR>
+
+<TR Align=Center CellPadding=3 VAlign=Center>
+<TD>ELKS</TD>
+<TD>0.1.0</TD>
+<TD><P Align=Justify>After much development, the 0.1.0 kernel has been
+released, and development has progressed to the next stage.</P></TD>
+</TR>
+
+<TR Align=Center CellPadding=3 VAlign=Center>
 <TD>11</TD>
 <TD RowSpan=2>Mar</TD>
-<TD>Mar</TD>
-<TD RowSpan=3>2002</TD>
 <TD>ELKS/WEB</TD>
 <TD>0.2.2</TD>
 <TD><P Align=Justify>Revised ELKS website. The ELKS release history was
